- Utilities : ImageMagick, Launchy, RocketDock, Synergy

GUI Enhancements
- Brand new look and feel sporting a vertical layout and colors.
- Added the Upgradeable category that lists all installed applications with
  available upgrades.
- AppSnap now displays download progress information.
- Applications can now be filtered by name based on a user specified string.
- Added a bug report button to simplify reporting problems.

Internal Improvements
- Support for parallel downloading in order to make best use of the available
  connection.
- Intelligent Python based build system to simplify packaging AppSnap.
- Installer is now capable of detecting and uninstalling older versions. AppSnap
  can now be added to its own database.
- Installer now deletes only installed files thus preserving installed.ini,
  userdb.ini and the cache directory.
- Installer now supports silent uninstallation.
- AppSnap source is now distributed in a ZIP archive by the installer.
- Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.

Bug Fixes
- Fixed bug in "Update DB" where a failed DB download was wiping out the current
  DB and killing AppSnap.
- Installer filenames which do not contain any version information are now 
  redownloaded (if more than a day since the last download) since we have no way
  to know if the file has changed.
- Obsolete sections in installed.ini are now filtered out.
- Added some more error checking to update DB.
- AppSnap no longer displays a console window during installs/uninstalls.
- Fixed bug in CLI that was causing crash if latest version detection failed.
- Fixed bug in uninstallation where quotes were being lost when uninstaller had
  upper case characters.

Scrape Fixes
- Fixed Adobe Reader scraping and download link.
- Fixed Firefox and Thunderbird download links, ftp was not working.
- WinSCP version scraping now done on Sourceforge.
- Dia's version search now includes pre-releases - e.g. 0.96-pre4